# cpquant

./: README.md  notes.txt
cpquant/: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  data.py  howtopublish.txt  publish.bash  pyproject.toml  requirements.txt  test_with_coverage.bash
cpquant/docs/: Makefile  conf.py  example.ipynb  make.bat
cpquant/src/cpquant/: data.py
cpquant/tests/: test_cpquant.py  test_data.py
