[tool.poetry]
name = "cpquant"
version = "0.1.0"
description = "A python package developed by the Cal Poly Quantitative Finance Club for dealing with financial data (California Polytechnic State University San Luis Obispo)"
authors = ["Charlie Ray"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
